plugins/plugin-bash-like/web/css/my-diff2html.css
.d2h-wrapper, .d2h-file-list-wrapper, .d2h-file-list-header, .d2h-file-list, .d2h-file-wrapper, .d2h-file-header, .d2h-file-diff, .d2h-code-wrapper {
    display: flex;
    flex-direction: column;
    white-space: normal;
}

/* side-by-side */
.d2h-files-diff {
    display: flex;
    align-items: flex-start;
}
.d2h-code-side-linenumber {
    border-color: transparent;
    color: var(--color-text-02);
    width: 5em;
}
td > .d2h-code-side-linenumber {
    display: flex;
}
.d2h-file-side-diff {
    flex: 1;
    width: unset;
    margin-right: 0;
    margin-bottom: 0;
}
.d2h-code-side-line {
    display: flex;
}
.d2h-code-side-emptyplaceholder, .d2h-emptyplaceholder {
    background: transparent;
    border: none;
}

.d2h-diff-table, .d2h-file-name-wrapper, .d2h-file-stats {
    font-family: var(--font-monospace);
    font-size: 1em;
}

.d2h-file-wrapper {
    border: 1px solid var(--color-ui-04);
    border-radius: 0;
    margin-bottom: 1.5em;
}

.d2h-diff-table {
    table-layout: fixed;
    border-spacing: 0;
}

.d2h-file-header {
    background-color: var(--color-ui-06);
    border-color: var(--color-content-divider);
}

.d2h-code-linenumber {
    background-color: var(--color-ui-01);
    width: 7em;
    color: var(--color-text-02);
    border: none;
    border-right: 1px solid var(--color-ui-02);
    white-space: nowrap;
    position: static;
}

.d2h-diff-tbody>tr>td {
    padding: 0;
    height: 1.5em;
}
.d2h-diff-tbody>tr>td:not(.d2h-info) {
    background-color: var(--color-ui-01);
}

.d2h-ins, .d2h-del {
    /* inserts and deletes */
    font-weight: 500;
    border: none;
    background-color: transparent;
}

.d2h-ins {
    /* inserts */
    color: var(--color-green);
}

.d2h-del {
    /* deletes */
    color: var(--color-red);
}

.d2h-code-line ins, .d2h-code-side-line ins {
    /* character-level inserts */
    background-color: var(--color-light-green);
    color: var(--color-white);
    padding: 0.25em 0.5em;
}

.d2h-code-line del, .d2h-code-side-line del {
    /* character-level deletes */
    background-color: var(--color-light-red);
    color: var(--color-white);
    padding: 0.25em 0.5em;
}

.d2h-file-diff .d2h-ins.d2h-change, .d2h-file-diff .d2h-del.d2h-change {
    background-color: var(--color-ui-01);
}

.line-num1, .line-num2 {
    color: var(--color-text-02);
    vertical-align: middle;
    display: inline-flex;
    height: 100%;
    align-items: center;
    justify-content: flex-end;
    float: unset;
    width: 3em;
    padding-left: 1ex;
}

.d2h-code-line {
    margin-left: 0;
    display: flex;
    height: 100%;
    align-items: center;
    padding: 0 1em;
}

.d2h-file-list-wrapper {
    margin-bottom: 2em;
}

.d2h-file-list>li {
    border: none;
}

.d2h-info {
    background-color: var(--color-ui-02);
    color: var(--color-text-02);
}

.d2h-code-line ins, .d2h-code-side-line ins, .d2h-code-line del, .d2h-code-side-line del {
    display: unset;
}

.d2h-file-list-wrapper a, .d2h-file-list-wrapper a:visited {
    color: var(--color-brand-01);
    text-decoration: underline;
}

.d2h-changed {
    color: var(--color-yellow);
    background-color: var(--color-ui-02);
    border-color: var(--color-light-yellow);
}

.d2h-file-stats-wrapper {
    font-size: 0.875em;
    width: 5em;
}
.d2h-file-stats {
    justify-content: flex-end;
}
.d2h-file-stats > span {
    color: var(--color-white);
    border-color: transparent;
    padding: 0.25em;
    font-size: 0.875em;
}
.d2h-lines-added {
    background: var(--color-light-green);
}
.d2h-lines-deleted {
    background: var(--color-light-red);
}

/* + prefix text for insert */
.d2h-ins .d2h-code-line-prefix {
    color: var(--color-green);
    font-weight: bold;
}

/* - prefix text for insert */
.d2h-del .d2h-code-line-prefix {
    color: var(--color-red);
    font-weight: bold;
}

